Entries are sorted chronologically from oldest to youngest.  Starting with
PNMixer entries are labeled with release version.

version 0.8:
 - New translations: Serbian

version 0.7:
 - PNMixer went through a major rewrite !
   The new code share little with the previous 0.6 version.
 - New translations: Croatian, Dutch, Simplified Chinese, Ukrainian, Vietnamese.
 - Icon theme is now more restrictive and more usable. The user can
   choose between the system icon theme, or the PNMixer icon theme.
 - Volume change improvements:
	- 2 steps are configurable: normal and fine.
	- They apply to every way of changing volume: keyboard, mouse, hotkeys.
	  Before, there was still some hard-coded steps here and there.
	- Fine-grained (decimal) steps are now possible. Some USB DACs need
	  such fine tuning.
 - Volume popup orientation is now configurable (horizontal or vertical).
 - Debug messages are now available using the `-d` command-line option.
   There's no need to rebuild PNMixer anymore.
 - Build infrastructure:
	- new rules `indent-code` and `indent-xml`.

version 0.6:
 - GTK3 support (use './autogen.sh --without-gtk3' to use GTK2 instead)
 - Notifications support (use './autogen.sh --without-libnotify' to disable)
 - New translations: Italian and Russian
 - Tooltip is more informative
 - Improvements in build architecture:
 	- Travis support (used by GitHub)
	- Doxygen documentation added to the code (type 'make doc')
	- 'data' split in sub-directories, populated with Makefiles.am
	- use 'intltool' instead of 'glib-gettext' to handle translations
	- desktop file is now translated and part of POTFILES
 - Better handling of USB soundcards that are unplugged:
 	- A notification is sent
	- Another soundcard in the list (starting with the default) is opened,
	  so that PNMixer is still usable and useful
	- If USB card is re-plugged afterward, one should click 'Reload Alsa'
	  in the popup menu, so that PNMixer selects the USB card
 - Lots of bug fixes

version 0.5: