@@ -1,11 +1,12 @@
 [Desktop Entry]
 Name=PNMixer
-_GenericName=System Tray Mixer
-_Comment=An audio mixer for the system tray
+GenericName=System Tray Mixer
+Comment=An audio mixer for the system tray
 # TRANSLATORS: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-_Keywords=alsa;audio;mixer;sound;
+Keywords=alsa;audio;mixer;sound;
 Exec=pnmixer
 TryExec=pnmixer
+# TRANSLATORS: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=pnmixer
 Terminal=false
 Type=Application
