@@ -2,7 +2,9 @@ Entries are sorted chronologically from oldest to youngest.  Starting with
 PNMixer entries are labeled with release version.
 
 version 0.8:
- - New translations: Serbian
+ - Translations:
+	- Use modern 'gettext' instead of 'intltool'
+	- New translations: Serbian
 
 version 0.7:
  - PNMixer went through a major rewrite !
